Scala3/scala3-22310/compiler-output/scala3-error.txt
Java Error:
/root/autodl-tmp/tmp/0040d9c78f4d2e66/0040d9d1651fe732/O2YeBtB.java:3: error: O2YeBtB is not abstract and does not override abstract method o0VALOTT(IJn<JEd0tJ,Void>,Void,O75ZVEt) in IJn
public final class O2YeBtB extends UwurxJq<Object, Void>  {
             ^
1 error
